2015-07-06  gepr  <gepr@tempusdictum.com>

	* parameters.json (blockDuration): New parameter specifies amount of time (1/cyclePerTime) a block lasts before it starts to make pRNG draws against p(unblock) = 1 - P(block).

2015-07-02  gepr  <gepr@tempusdictum.com>

	* parameters.json: Remove drug2symptom and mp2symptom.

2015-07-01  gepr  <gepr@tempusdictum.com>

	* parameters.json (drugPotency): New parameter used to calculate Symptom as function of Drug.

2015-06-29  gepr  <gepr@tempusdictum.com>

	* parameters.json(mp2mpo, detectorSites, P_occupySite, P_releaseMPO):  New parameters to specify the MP->MPO->Symptom mechanism.

2015-06-22  gepr  <gepr@tempusdictum.com>

	* case-*.json: Reconfigure to match parameters.json.

	* parameters.json: Parameters set so that we can see the dynamics after Symptom maxes out with the ldRates("MP") = lRates("Drug").

2015-06-17  gepr  <gepr@tempusdictum.com>

	* parameters.json: Change instances of mark, Marker, and marker to mp, MP, and mp.  Change pain to symptom.

2015-06-16  gepr  <gepr@tempusdictum.com>

	* parameters.json: Restructured to place rate constants in a Map of Maps:  Map(Particle => Map (Edge(from,to) => rate)).  For example: ldRates = {"Drug" => { {"source", "central} => 0.3}, {"Marker" => { {"periph", "central"} => 0.03} } }.  Also added separate rate constants for LooseDyn.

2015-06-15  gepr  <gepr@tempusdictum.com>

	* parameters.json: Set {morbidity, morb2mark, mark2pain, drug2pain} to 0.1, which produces output on par with the Pain clamp at 10.

2015-06-13  gepr  <gepr@tempusdictum.com>

	* parameters.json (morb2mark, mark2pain, drug2pain): New parameters for morbidity.

2015-06-11  gepr  <gepr@tempusdictum.com>

	* parameters.json(doseTime): Add a new parameter so that the simulation will execute for awhile before it is dosed with compound.
	New model parameter sublist for LooseDyn containing the morbidity amount.

2015-06-09  gepr  <gepr@tempusdictum.com>
